ref: ModuleManager